[package]
name = "qryptotoken"
version = "0.1.0"
edition = "2021"

[lib]
name = "qryptotoken_pkcs11"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.68"

[dev-dependencies]
hex = "0.4.3"
env_logger = "0.11.7"

[dependencies]
env_logger = { version = "0.11.7", optional = true }
aes-gcm = "0.10.3"
aes-kw = { version = "0.2.1", features = ["alloc"] }
asn1 = "0.16.2"
bitflags = "2.4.1"
cfg-if = "1.0.0"
constant_time_eq = "0.3.0"
data-encoding = "2.4.0"
hex = "0.4.3"
itertools = "0.12.1"
libc = "0.2.151"
num-bigint = "0.4.4"
num-integer = "0.1.45"
num-traits = "0.2.17"
once_cell = "1.18.0"
pbkdf2 = "0.12.2"
rand = "0.8.5"
rand_core = { version = "0.9.1", features = ["std", "os_rng"] }
drbg = "1.0.0"
rusqlite = "0.31.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
serial_test = "3.1.1"
sha1 = "0.10.6"
sha2 = "0.10.8"
uuid = { version = "1.4.1", features = ["v4"] }
zeroize = "1.6.0"
log = "0.4.22"
libcrux-kem = "0.0.2"
libcrux-ecdh = "0.0.2"
libcrux-ml-kem = "0.0.2"
ml-dsa = { version = "0.1.0-pre.2" }
libcrux-ml-dsa = { git = "https://github.com/cryspen/libcrux.git", rev = "b80be51c4c7a320c00bf8af2b7a6703f53eb649b", version = "0.0.2" }


[features]
default = ["pure-rust", "env_logger"]

env_logger = ["dep:env_logger"]
ossl = []
fips = ["rusqlite/bundled"]
pure-rust = []
